site/public/css/app.css
body {
  font-family: "Helvetica Neue", "Helvetica", Arial, sans-serif;
  font-weight: 500;
  background-color: #F0F0E6;
}

body .container {
  width: 800px;
  font-size: 90%;
  margin: 2em auto;
  background: white;
  border: 2px solid #D8D8CF;
  -webkit-border-radius: 15px;
  -moz-border-radius: 15px;
  border-radius: 15px;
  padding: 2em 5em;
}

h1 {
  color: #222222;
  font-size: 1.6em;
  padding-bottom: 0.4em;
  border-bottom: 1px solid #9B9B9B;
}

h2 {
  color: #222222;
  font-size: 1.5em;
}

a {
  text-decoration: none;
  color: #640000;
}

a:hover {
  text-decoration: underline;
}

ul li {
  list-style-type: square;
}


pre.CodeRay {
  overflow: auto;
  font-family: 'Bitstream Vera Sans Mono','Courier',monospace;
  border: 1px solid #CCC;
  background-color: #F8F8F8;
  color: black;
  padding: 7px;
  font-size: 0.9em;
  -webkit-border-radius: 4px;
  -moz-border-radius: 4px;
  border-radius: 4px;
}

pre.CodeRay .string {
  color: #D14;
}

pre.CodeRay .constant {
  color: rgb(0, 128, 128);
}

pre.CodeRay .predefined-constant {
  color: rgb(0, 128, 128);
}

pre.CodeRay .instance-variable {
  color: #FF9A52;
}

pre.CodeRay .keyword {
  font-weight: bold;
}

pre.CodeRay .symbol {
  color: #990073;
}

pre.CodeRay .integer {
  color: #FF9A52;
}

pre.CodeRay .comment {
  color: #998;
}

pre.CodeRay .regexp {
  color: #FF9A52;
}

div.logo {
  text-align: center;
}

